[tool.poetry]
name = "e2e-ai-chatbot"
version = "0.1.0"
description = ""
authors = ["KhoiVN", "nguyenkhoi8071@gmail.com"]
readme = "README.md"
packages = [{include = "e2e_ai_chatbot"}]
repository = "https://github.com/vnk8071/E2E-AI-Chatbot"

[tool.poetry.dependencies]
python = "3.8.10"
gradio = "3.28.3"
pydantic = "^1"
gpt4all = "0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.test.dependencies]
# The only dependencies that should be added are
# dependencies used for running tests (e.g., pytest, freezegun, response).
# Any dependencies that do not meet that criteria will be removed.
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
duckdb-engine = "^0.7.0"
pytest-watcher = "^0.2.6"
freezegun = "^1.2.2"
responses = "^0.22.0"
pytest-asyncio = "^0.20.3"
lark = "^1.1.5"
pytest-mock  = "^3.10.0"
pytest-socket = "^0.6.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.249"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
black = "^23.1.0"