[tool.poetry]
name = "e2e-ai-chatbot"
version = "0.1.0"
description = ""
authors = ["KhoiVN", "nguyenkhoi8071@gmail.com"]
readme = "README.md"
repository = "https://github.com/vnk8071/E2E-AI-Chatbot"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gradio = "3.28.3"
pydantic = "^1"
gpt4all = "0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
ruff = "^0.0.249"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
black = "^23.1.0"
